@@ -9,6 +9,10 @@ For more detailed instructions on filling in the ChangeLog form, see
 ******************************************************************************
 post-6.2 release changes: 
 
+2003-08-19  Kevin Layer  <layer@crikey>
+
+	* Makefile: fi-vers.el change not put into makefile!
+
 2003-08-14  Kevin Layer  <layer@crikey>
 
 	* fi-keys.el: improve fi:subprocess-beginning-of-line for
